- fix all the overflowing info cards - info cards are in middle of the whiteboard in 480px max width

--- a/css/projects.css
+++ b/css/projects.css
@@ -248,7 +248,7 @@
 @media (max-width: 480px) {
   .card-info {
     width: 90vw;
-    margin:0 -2.4rem;
+    margin:0 -2.1rem;
   }
 
 }
